# mazegizmo

./: .gitignore  LICENSE  connection.txt  sensortest.py
SDLproto/: game  game.cpp
code/: CMakeLists.txt  PC_CMakeLists.txt  Pi_CMakeLists.txt  b2  box2d_example.cpp  build.txt  buildpc.sh  game.c  game.cpp  getbno055.h  i2c_bno055.c  maze.txt
code/box2d_example/: b2d_example
proto1/: switch_types.txt
protogame/: Makefile  game.cpp
